// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDialog should render a disabled component and match snapshot 1`] = `

<div tabindex="-1"
     class="dialog__content"
     style="z-index: 0;"
>
  <div class="dialog"
       style="display: none;"
  >
  </div>
</div>

`;

exports[`VDialog should render a fullscreen component and match snapshot 1`] = `

<div tabindex="-1"
     class="dialog__content"
     style="z-index: 0;"
>
  <div class="dialog dialog--fullscreen"
       style="display: none;"
  >
  </div>
</div>

`;

exports[`VDialog should render a lazy component and match snapshot 1`] = `

<div tabindex="-1"
     class="dialog__content"
     style="z-index: 0;"
>
  <div class="dialog"
       style="display: none;"
  >
  </div>
</div>

`;

exports[`VDialog should render a persistent component and match snapshot 1`] = `

<div tabindex="-1"
     class="dialog__content"
     style="z-index: 0;"
>
  <div class="dialog dialog--persistent"
       style="display: none;"
  >
  </div>
</div>

`;

exports[`VDialog should render a scrollable component and match snapshot 1`] = `

<div tabindex="-1"
     class="dialog__content"
     style="z-index: 0;"
>
  <div class="dialog dialog--scrollable"
       style="display: none;"
  >
  </div>
</div>

`;

exports[`VDialog should render component and match snapshot 1`] = `

<div tabindex="-1"
     class="dialog__content"
     style="z-index: 0;"
>
  <div class="dialog"
       style="display: none;"
  >
  </div>
</div>

`;

exports[`VDialog should render component with custom origin and match snapshot 1`] = `

<div tabindex="-1"
     class="dialog__content"
     style="z-index: 0;"
>
  <div class="dialog"
       style="display: none;"
  >
  </div>
</div>

`;

exports[`VDialog should render component with custom transition and match snapshot 1`] = `

<div tabindex="-1"
     class="dialog__content"
     style="z-index: 0;"
>
  <div class="dialog"
       style="display: none;"
  >
  </div>
</div>

`;

exports[`VDialog should render component with custom width (max-width) and match snapshot 1`] = `

<div tabindex="-1"
     class="dialog__content"
     style="z-index: 0;"
>
  <div class="dialog"
       style="max-width: 100px; display: none;"
  >
  </div>
</div>

`;
